--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./build/server.js",
+    "start": "node ./build/server.js",
+    "dev": "nodemon ./build/server.js",
     "build": "tsc "
   },
   "engines": {
